--- a/settings.cfg
+++ b/settings.cfg
@@ -1,5 +1,4 @@
-directory_path = "C:\\Path\\To\\Directory1"
-max_directory_size = 500
-
-directory_path = "C:\\Path\\To\\Directory2"
-max_directory_size = 500
+directory_path=C:\\Biblioteka\\Testy
+max_directory_size=10
+directory_path=C:\\test\\Testy
+max_directory_size=20
