--- a/settings.cfg
+++ b/settings.cfg
@@ -1,4 +1,6 @@
-directory_path=C:\\Biblioteka\\Testy
+directory_path=C:\\test
+max_directory_size=200
+recursive=0
+directory_path=C:\\test2
 max_directory_size=10
-directory_path=C:\\test\\Testy
-max_directory_size=20
+recursive=1
