--- a/settings.cfg
+++ b/settings.cfg
@@ -1,6 +1,3 @@
-directory_path=C:\\test
-max_directory_size=200
-recursive=0
-directory_path=C:\\test2
-max_directory_size=10
+directory_path=C:\Users\User\Documents\CC
+max_directory_size=0
 recursive=1
